--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -113,7 +113,7 @@ li {
 }
 p {
 	color: var(--color-gray-dark);
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	font-size: var(--font-size-100);
 	font-weight: normal;
 	margin-bottom: 15px;
@@ -438,7 +438,7 @@ a.scroll-to-top:hover {
 .btn.white-btn:hover {
 	background-color: var(--color-light-green);
 	border: 1px solid var(--color-light-green);
-	color: var(--theme-color);
+	color: var(--color-white);
 }
 
 .more-btn-card {}
@@ -621,7 +621,7 @@ ul.top-list-1 li i {
 	color: var(--theme-color);
 	font-weight: 600;
 	line-height: var(--line-height-100);
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 }
 .header ul.login-reg-list li a:hover {
 	color: var(--color-gray-dark);
@@ -669,7 +669,7 @@ ul.top-list-1 li i {
 }
 .header-mobile-card {}
 .header-mobile-card .bars-search-card {
-	width: 120px;
+	/*width: 120px;*/
 	float: left;
 }
 .header-mobile-card .logo-card {
@@ -849,22 +849,23 @@ ul.top-list-1 li i {
 .breadcrumb-section .page-title h1 {
 	font-size: var(--font-size-100);
 	margin-bottom: 0px;
+    color: var(--color-white);
 }
 .breadcrumb-section .breadcrumb {
 	float: left;
 	margin-bottom: 0px;
 }
 .breadcrumb-section .breadcrumb .breadcrumb-item a {
-	color: var(--color-black);
+	color: var(--color-white);
 }
 .breadcrumb-section .breadcrumb li a:hover {
 	color: var(--theme-color);
 }
 .breadcrumb-section .breadcrumb-item.active {
-	color: var(--theme-color);
+	color: var(--color-gray-400);
 }
 .breadcrumb-section .breadcrumb-item + .breadcrumb-item::before {
-	color: var(--theme-color);
+	color: var(--color-white);
 }
 
 /* ======================
@@ -960,7 +961,7 @@ ul.top-list-1 li i {
 	font-size: 14px;
 }
 .tp-menu ul li a {
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	color: var(--color-white);
 	font-size: var(--font-size-200);
 	font-weight: 800;
@@ -1063,7 +1064,7 @@ ul.top-list-1 li i {
 	color: var(--color-black);
 	font-size: var(--font-size-100);
 	font-weight: 700;
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 }
 .tp-menu ul li ul.submenu li:hover > a,
 .tp-menu ul li ul.submenu li.active > a,
@@ -1077,7 +1078,7 @@ ul.top-list-1 li i {
 	color: var(--color-green);
 	font-weight: 800;
 	font-size: var(--font-size-100);
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	position: relative;
 	margin-bottom: 10px;
 }
@@ -1210,12 +1211,12 @@ ul.top-list-1 li i {
 	display: inline-block;
 	padding: 10px 10px 10px 20px;
 	width: 100%;
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	font-weight: 700;
 }
 .mobile-menu li > a:hover,
 .mobile-menu li.active > a {
-    color: var(--theme-color);
+    color: var(--color-white);
 	text-decoration: none;
 }
 .mobile-menu li.has-children-menu.active > a {
@@ -1291,7 +1292,7 @@ ul.top-list-1 li i {
 	width: 100%;
 	font-weight: 700;
 	border-radius: 50px;
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	padding: 8px 15px;
 	font-size: var(--font-size-300);
 }
@@ -1403,7 +1404,7 @@ ul.categories-wrap > li > a {
 	margin: 8px 0px;
 	border-radius: 30px;
 	font-size: var(--font-size-200);
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	color: var(--color-black);
 	font-weight: 800;
 	width: 100%;
@@ -1476,7 +1477,7 @@ ul.categories-wrap li ul.nav-category-list li {
 }
 ul.categories-wrap li ul.nav-category-list li a {
 	font-size: var(--font-size-100);
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	font-weight: 700;
 	padding: 10px 15px;
 	color: var(--color-black);
@@ -1731,7 +1732,7 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 .featured-card .featured-title a {
 	font-size: var(--font-size-100);
 	font-weight: 800;
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	color: var(--color-black);
 }
 .featured-card .featured-title a:hover {
@@ -1888,13 +1889,13 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 	display: inline-block;
 	font-size: 16px;
 	font-weight: 700;
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	color: var(--theme-color);
 }
 .item-card .deals-countdown-card .deals-countdown .countdown-section .countdown-period {
 	width: 100%;
 	display: inline-block;
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	text-transform: capitalize;
 }
 .item-card .item-title {
@@ -2009,6 +2010,7 @@ ul.nav-pills.tp-tabs li .nav-link {
     -moz-transition: all 0.3s ease-out 0s;
     transition: all 0.3s ease-out 0s;
     font-size: 13px;
+    margin-bottom: 5px;
 }
 ul.nav-pills.tp-tabs .nav-link:hover,
 ul.nav-pills.tp-tabs .nav-link.active,
@@ -2063,7 +2065,7 @@ ul.nav-pills.tp-tabs .show > .nav-link {
 .product-details-slider {
 	width: 100%;
 	height: auto;
-	border: 1px solid var(--color-light-green);
+	border: 1px solid var(--color-gray-400);
 	text-align: center;
 	margin-bottom: 15px;
 	overflow: hidden;
@@ -2219,7 +2221,7 @@ ul.nav-pills.tp-tabs .show > .nav-link {
 }
 .pr_details .pr_quantity input {
 	padding: 5px 10px;
-	border: 1px solid var(--color-light-green);
+	border: 1px solid var(--color-gray-400);
 	width: 130px;
 }
 .pr_details .pr_buy_cart {
@@ -2237,7 +2239,7 @@ ul.nav-pills.tp-tabs .show > .nav-link {
 
 .desc-review-nav {
 	margin-bottom: 40px;
-	border-bottom: 1px solid var(--color-light-green);
+	border-bottom: 1px solid var(--color-gray-400);
 }
 .desc-review-nav a {
 	font-size: 16px;
@@ -2809,7 +2811,7 @@ ul.widget-size li.unit.active {
 .sidebar .widget-card {
 	background: var(--color-white);
 	padding: 15px 15px 15px 15px;
-	border: 1px solid var(--color-light-green);
+	border: 1px solid var(--color-gray-400);
 	border-radius: 5px;
 	margin-bottom: 25px;
 	-webkit-transition: all 0.3s ease-out 0s;
@@ -2820,9 +2822,9 @@ ul.widget-size li.unit.active {
 	font-size: var(--font-size-400);
 	font-weight: 700;
 	color: var(--color-black);
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	margin-bottom: 20px;
-	border-bottom: 1px solid var(--color-light-green);
+	border-bottom: 1px solid var(--color-gray-400);
 	padding-bottom: 10px;
 	position: relative;
 }
@@ -2849,7 +2851,7 @@ ul.widget-size li.unit.active {
 .sidebar .widget-card .widget-body ul.widget-list li a {
 	font-size: var(--font-size-100);
 	font-weight: 700;
-	font-family: var(--secondary-font-family);
+	font-family: var(--primary-font-family);
 	color: var(--color-black);
 }
 .sidebar .widget-card .widget-body ul.widget-list li a:hover {
@@ -2878,7 +2880,7 @@ ul.widget-size li.unit.active {
 	height: 25px;
 	line-height: 25px;
 	float: right;
-	background: var(--color-light-green);
+	background: var(--color-gray-400);
 	color: var(--theme-color);
 	font-size: var(--font-size-100);
 	text-align: center;
@@ -2890,18 +2892,18 @@ ul.widget-size li.unit.active {
 	width: 100%;
 }
 .slider-range .ui-widget.ui-widget-content {
-	border: 1px solid var(--theme-color);
+	border: 1px solid var(--color-light-green);
 	margin-bottom: 15px;
 }
 .slider-range .ui-widget-header {
-	border: 1px solid var(--color-light-green);
-	background: var(--color-light-green);
+	border: 1px solid var(--color-gray-400);
+	background: var(--color-gray-400);
 }
 .slider-range .ui-state-default,
 .slider-range .ui-widget-content .ui-state-default,
 .slider-range .ui-widget-header .ui-state-default {
 	border: 1px solid var(--theme-color);
-	background: var(--theme-color);
+	background: var(--color-light-green);
 }
 .slider-range .price-range {
 	margin-bottom: 10px;
@@ -4254,7 +4256,7 @@ ul.errors-list li {
     color: var(--color-white);
 }
 .copy-right a {
-	color: var(--theme-color);
+	color: var(--color-gray-400);
 }
 .payment-method {
 	float: right;
