--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -51,6 +51,7 @@ body {
 	font-weight: normal;
 	font-style: normal;
 	color: var(--color-gray-dark);
+	background: var(--main-bg);
 	font-size: var(--font-size-100);
 	line-height: var(--line-height-200);
 }
@@ -209,11 +210,13 @@ main {
 
 .inner-section {
 	padding: 40px 0px;
+	background: #01083e;
+	color: #fff;
 }
 .inner-section-bg {
+	background: #01083e;
 	height: 100%;
 	position: relative;
-	background: var(--color-lightness-green);
 }
 a.scroll-to-top {
 	display: none;
@@ -225,7 +228,7 @@ a.scroll-to-top {
 	line-height: 40px;
 	border-radius: 50%;
 	color: var(--color-white);
-	background-color: var(--theme-color);
+	background-color: var(--primary-bg);
 	text-align: center;
 	font-size: 18px;
 	z-index: 9999;
@@ -378,7 +381,7 @@ a.scroll-to-top:hover {
 }
 .btn.theme-btn {
 	color: var(--color-white);
-	background-color: var(--theme-color);
+	background-color: var(--primary-bg);
 }
 .btn.theme-btn::before {
 	position: absolute;
@@ -551,7 +554,8 @@ ul.top-list-1 li i {
 }
 .header-desktop {
 	display: block;
-	padding: 8px 0px;
+	padding: 0px 0px;
+	background-color: var(--main-bg);
 }
 .header-mobile {
 	display: none;
@@ -633,6 +637,7 @@ ul.top-list-1 li i {
 	display: flex;
 	float: right;
 	margin-top: 13px;
+	gap: 10px;
 }
 .header ul.head-round-icon li:not(:last-of-type) {
 	margin-left: 15px;
@@ -645,7 +650,7 @@ ul.top-list-1 li i {
     font-size: 18px;
     display: inline-block;
     text-align: center;
-    color: #333;
+    color: #ffffff;
     border-radius: 50%;
     margin-right: 0px;
     -webkit-transition: all 0.3s ease-out 0s;
@@ -659,7 +664,7 @@ ul.top-list-1 li i {
     position: absolute;
     left: 13px;
     top: -6px;
-    background: var(--theme-color);
+    background: var(--primary-bg);
     padding: 0px 3px;
     line-height: 19px;
     border-radius: 50%;
@@ -840,7 +845,9 @@ ul.top-list-1 li i {
 .breadcrumb-section {
 	width: 100%;
 	height: auto;
-	background: var(--color-light-green);
+	/* background: var(--color-light-green); */
+	background: var(--main-bg);
+	border: 1px solid var(--primary-bg);
 	padding: 15px 0px;
 }
 .breadcrumb-section .page-title {
@@ -881,7 +888,7 @@ ul.top-list-1 li i {
     left: 0;
     top: 0;
     height: 90%;
-    background: var(--theme-color);
+    background: var(--color-white);
     width: 4px;
 }
 .section-heading h5 {
@@ -891,7 +898,7 @@ ul.top-list-1 li i {
 	color: var(--theme-color);
 }
 .section-heading h2 {
-    color: var(--theme-color);
+    color: var(--color-white);
     position: relative;
     margin-bottom: 20px;
     font-size: 20px;
@@ -1747,6 +1754,7 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 	background-size: cover;
 	height: 100%;
 	position: relative;
+	background-color: var(--primary-bg);
 }
 .offer-card {
 	position: relative;
@@ -1797,12 +1805,12 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 	background-size: cover;
 	height: 100%;
 	position: relative;
-	background: var(--color-lightness-green);
+	background: var(--main-bg);
 }
 .item-card {
-	background: var(--color-white);
+	background: #01083e91;
 	padding: 15px 15px 10px 15px;
-	border: 1px solid var(    --color-gray-400);
+	border: 1px solid #003a88c2;
 	border-radius: 5px;
 	margin-bottom: 25px;
 	-webkit-transition: all 0.3s ease-out 0s;
@@ -1837,7 +1845,8 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 }
 .item-card .item-image .item-label {
 	position: absolute;
-	background: var(--color-green);
+	background: #01083e;
+    border: 1px solid #004aad;
 	color: var(--color-white);
 	padding: 2px 8px;
 	top: 1px;
@@ -1903,7 +1912,7 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 }
 .item-card .item-title a {
     font-family: var(--pirmary-font-family);
-    color: var(--color-black);
+    color: var(--warning-bg);
     font-weight: 400;
     font-size: var(--font-size-100);
     margin-bottom: 5px;
@@ -1914,9 +1923,10 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 .item-card .item-sold {
 	margin-bottom: 5px;
     font-size: 12px;
+	color: #fff;
 }
 .item-card .item-sold a {
-	color: var(--color-green);
+	color: var(--success-bg);
 }
 .item-card .item-pric-card {
 	width: 100%;
@@ -1930,6 +1940,7 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 .item-card .item-pric-card .new-price {
 	float: left;
 	margin-right: 7px;
+	color: #fff;
 }
 .item-card .item-pric-card .old-price {
 	float: left;
@@ -1939,14 +1950,14 @@ ul.categories-wrap li ul.nav-category-list li.cat-list-hideshow.open {
 .item-image .addtowishlist{
     position: absolute;
     right: 2px;
-    background: #e9e9e9;
+    background: var(--primary-bg);
     height: 30px;
     width: 30px;
     text-align: center;
     line-height: 31px;
     border-radius: 50%;
     z-index: 1;
-    border: 1px solid #ddd;
+	color: var(--color-white);
 }
 .item-card .item-card-bottom {
 	width: 100%;
@@ -2015,8 +2026,8 @@ ul.nav-pills.tp-tabs li .nav-link {
 ul.nav-pills.tp-tabs .nav-link:hover,
 ul.nav-pills.tp-tabs .nav-link.active,
 ul.nav-pills.tp-tabs .show > .nav-link {
-	background: var(--theme-color);
-	color: var(--color-white);
+	background: var(--warning-bg);
+	color: var(--color-black);
 }
 
 /* ======================
@@ -2508,7 +2519,7 @@ ul.widget-size li.unit.active {
 	background-size: cover;
 	height: 100%;
 	position: relative;
-	background: var(--color-white);
+	background: var(--main-bg);
 }
 .deals-section .item-image::before {
 	position: absolute;
@@ -2522,6 +2533,7 @@ ul.widget-size li.unit.active {
 	margin-top: 0px;
 	overflow: hidden;
 	border-radius: 5px;
+	height: 94%;
 	border: 1px solid var(--color-gray-400);
 }
 .deals-card::before {
@@ -3362,7 +3374,7 @@ ul.errors-list li {
 }
 .social-media i {
 	color: var(--color-white);
-	background: var(--color-green);
+	background: var(--main-bg);
 	border-radius: 50%;
 }
 .social-media i:hover {
@@ -3762,6 +3774,8 @@ ul.errors-list li {
 .home_3 .breadcrumb-section {
 	background: transparent;
 	padding: 10px 0px;
+	background: #01083e;
+    border-bottom: 1px solid #004aad;
 }
 
 /* ======================
@@ -4175,8 +4189,8 @@ ul.errors-list li {
 	position: relative;
 }
 .footer-middle {
-    padding: 20px 0;
-    background: var(--color-black);
+    padding: 50px 0;
+    background: var(--primary-bg);
 }
 
 .footer-widget-card {
@@ -4188,6 +4202,7 @@ ul.errors-list li {
 }
 .footer-widget .widget-title {
 	margin-bottom: 15px;
+	color: var(--color-white);
 }
 .footer-widget .info-card {}
 .footer-widget .info-card .info-logo {
@@ -4248,9 +4263,8 @@ ul.errors-list li {
 }
 .footer-widget ul.widget-list li a:hover {}
 .footer-bottom {
-    padding: 30px 0px 20px 0px;
-    border-top: 1px solid var(--color-gray-dark);
-    background: var(--color-black);
+    padding: 20px 0px 10px 0px;
+    background: var(--main-bg);
 }
 .copy-right {
 	margin-bottom: 10px;
